<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alarm</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="first_time_picker">First: </string>
    <string name="second_time_picker">Second: </string>
    <string name="Third_time_picker">Third: </string>
    <string name="Other_time_picker">Other: </string>

</resources>